--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Testing Dialogflow",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "jest"
   },
   "repository": {
@@ -20,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/heidiperalta/chatbot/issues"
   },
-  "homepage": "https://github.com/heidiperalta/chatbot#readme"
+  "homepage": "https://github.com/heidiperalta/chatbot#readme",
+  "dependencies": {
+    "express": "^4.16.3"
+  }
 }
